--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,10 +76,10 @@
         android:text="@string/lap_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonLap" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonLap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Lap"
