--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,8 +67,13 @@
             android:id="@+id/textViewTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@mipmap/time_background"
+            android:paddingStart="20sp"
+            android:paddingTop="0sp"
+            android:paddingRight="15sp"
+            android:paddingBottom="20sp"
             android:text="@string/_00_00"
-            android:textSize="72sp"
+            android:textSize="100sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
